fix(navbar): change navbar gap for laptop responsive

--- a/sections-css/header.css
+++ b/sections-css/header.css
@@ -153,7 +153,7 @@
   }
   .navbar-sections {
     display: flex;
-    gap: 30px;
+    gap: 40px;
     width: 60%;
     justify-content: center;
   }
